package app.domain.model;

public class Barcode {
}
