@startuml

skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes
left to right direction

class MedicalLabTechnician{}

class Sample{}

class Test{
- code
- nhsCode
- dateOfTestRegistration
- dateOfSamplesCollection
- dateOfChemicalAnalysis
- dateOfDiagnosis
}

class Barcode {
- barcodeNumber
}

class ExternalAPI{}

/'class LabOrder{}'/

class Client{
- name
- citizenCardNum
- nhsNum
- birthDate
- sex
- taxIdNum
- phoneNum
- email
}

/'
class TestType{
- code
- description
- collectingMethod
}'/

/'class Parameter {
  -code
  -shortName
  -description
}'/

class Company {
-designation
}

class ClinicalAnalysisLaboratory{
- laboratoryID
}

class Laboratory {
- name
- address
- phoneNumber
- numTIN
}

/'class Config {}'/




MedicalLabTechnician "1" --- "*" Sample : records >
Sample "1" -- "1" Barcode : identified with >
Barcode "*" -- "1" ExternalAPI : generated by >
Test "1" -- "1..*" Sample : collects >
/'Test "1" --- "1" LabOrder : originates <'/
/'LabOrder "1..*" --- "1" Client : provided by >'/

/'comment line above'/
/'Test "*" -- "1" TestType : classified as >'/

/'LabOrder -- TestType : contains >'/
/'LabOrder -- "1..*" Parameter : contains >'/

/'ExternalAPI -- Config : defined by >'/
Test "*" -- "1" Client : requested by >
Company "*" - "1" ExternalAPI : makes use of >
Company "1" --- "*" Sample : manages >
Company "1" --- "*" Test : conducts >
MedicalLabTechnician "1..*" -- "1" ClinicalAnalysisLaboratory : works for >

ClinicalAnalysisLaboratory --|> Laboratory





@enduml